COF-528 Private Share Start UI - Role Selection - display user info labels

--- a/Depo/Depo/Presentation/UserStories/Others/PrivateShare/UserRoleSelection/PrivateShareUserRoleViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/PrivateShare/UserRoleSelection/PrivateShareUserRoleViewController.xib
@@ -12,8 +12,10 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PrivateShareUserRoleViewController" customModule="Billo" customModuleProvider="target">
             <connections>
                 <outlet property="backButton" destination="rXk-cS-MHZ" id="75Q-jz-ufh"/>
+                <outlet property="displayNameLabel" destination="rI0-Po-iIC" id="MAw-E3-Dpg"/>
                 <outlet property="roleStackView" destination="gDS-Lf-voE" id="vbc-8M-KNx"/>
                 <outlet property="titleLabel" destination="Q6X-FJ-z3O" id="9RO-3G-PnB"/>
+                <outlet property="userNameLabel" destination="hcd-sQ-T9m" id="ubJ-up-n4P"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -22,6 +24,12 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q6X-FJ-z3O">
+                    <rect key="frame" x="186.5" y="60" width="41.5" height="20.5"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rXk-cS-MHZ">
                     <rect key="frame" x="16" y="55.5" width="46" height="30"/>
                     <state key="normal" title="Button"/>
@@ -29,24 +37,44 @@
                         <action selector="onBackTapped:" destination="-1" eventType="touchUpInside" id="3QX-wj-2T6"/>
                     </connections>
                 </button>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q6X-FJ-z3O">
-                    <rect key="frame" x="186" y="60" width="42" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="xAf-oi-x06">
+                    <rect key="frame" x="16" y="115.5" width="382" height="41"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rI0-Po-iIC">
+                            <rect key="frame" x="0.0" y="0.0" width="382" height="17"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="17" id="qkM-gm-reh"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hcd-sQ-T9m">
+                            <rect key="frame" x="0.0" y="22" width="382" height="19"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="19" id="ko4-nx-XhO"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                </stackView>
                 <stackView opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="infinite" placeholderIntrinsicHeight="100" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="gDS-Lf-voE">
-                    <rect key="frame" x="0.0" y="109.5" width="414" height="100"/>
+                    <rect key="frame" x="0.0" y="175.5" width="414" height="100"/>
                 </stackView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="gDS-Lf-voE" firstAttribute="top" secondItem="rXk-cS-MHZ" secondAttribute="bottom" constant="24" id="2Vz-fv-DIu"/>
                 <constraint firstItem="gDS-Lf-voE" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="7ch-N0-jFt"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="xAf-oi-x06" secondAttribute="trailing" constant="16" id="8dB-rr-vi1"/>
+                <constraint firstItem="xAf-oi-x06" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="ACZ-ar-nMi"/>
                 <constraint firstItem="Q6X-FJ-z3O" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="rXk-cS-MHZ" secondAttribute="trailing" constant="8" id="DeJ-af-AzT"/>
                 <constraint firstItem="Q6X-FJ-z3O" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="FIy-ww-jP9"/>
+                <constraint firstItem="xAf-oi-x06" firstAttribute="top" secondItem="rXk-cS-MHZ" secondAttribute="bottom" constant="30" id="UTV-Xr-A1X"/>
                 <constraint firstItem="rXk-cS-MHZ" firstAttribute="centerY" secondItem="Q6X-FJ-z3O" secondAttribute="centerY" id="VKy-tE-3GP"/>
+                <constraint firstItem="gDS-Lf-voE" firstAttribute="top" secondItem="xAf-oi-x06" secondAttribute="bottom" constant="19" id="a0n-5p-INX"/>
                 <constraint firstItem="rXk-cS-MHZ" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="h0e-Hc-fAy"/>
                 <constraint firstItem="Q6X-FJ-z3O" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="16" id="pYe-nL-RQQ"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="gDS-Lf-voE" secondAttribute="trailing" id="u3Q-R5-DOt"/>
