--- a/Depo/Depo/Presentation/UserStories/Others/PrivateShare/Views/Shared/PrivateShareSharedFilesViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/PrivateShare/Views/Shared/PrivateShareSharedFilesViewController.xib
@@ -12,6 +12,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PrivateShareSharedFilesViewController" customModule="Billo" customModuleProvider="target">
             <connections>
                 <outlet property="collectionView" destination="c4H-7I-uCm" id="0SW-6d-QDm"/>
+                <outlet property="topBarContainer" destination="tdo-YS-avN" id="2Og-C4-b8l"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -20,8 +21,20 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="c4H-7I-uCm">
-                    <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="XZs-mc-aWP">
+                    <rect key="frame" x="0.0" y="44" width="414" height="53"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tdo-YS-avN">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="53"/>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="53" id="tY1-d7-HAb"/>
+                            </constraints>
+                        </view>
+                    </subviews>
+                </stackView>
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="c4H-7I-uCm" customClass="QuickSelectCollectionView" customModule="Billo" customModuleProvider="target">
+                    <rect key="frame" x="0.0" y="97" width="414" height="765"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="KbB-cg-g9h">
                         <size key="itemSize" width="128" height="128"/>
@@ -34,12 +47,15 @@
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="c4H-7I-uCm" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="12q-Aw-vyA"/>
+                <constraint firstItem="XZs-mc-aWP" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="0NP-2n-MJ8"/>
+                <constraint firstItem="XZs-mc-aWP" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="MUh-X6-XNs"/>
                 <constraint firstItem="c4H-7I-uCm" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="Rr6-mH-9ER"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="c4H-7I-uCm" secondAttribute="bottom" id="ZB1-LM-lx5"/>
+                <constraint firstItem="c4H-7I-uCm" firstAttribute="top" secondItem="XZs-mc-aWP" secondAttribute="bottom" id="n9D-VM-NMl"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="c4H-7I-uCm" secondAttribute="trailing" id="sw8-4z-rRR"/>
+                <constraint firstItem="XZs-mc-aWP" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="uhW-TW-eqs"/>
             </constraints>
-            <point key="canvasLocation" x="-196" y="104"/>
+            <point key="canvasLocation" x="-197.10144927536234" y="103.79464285714285"/>
         </view>
     </objects>
     <resources>
