--- a/Depo/Depo/Presentation/UserStories/Others/PrivateShare/UserRoleSelection/PrivateShareUserRoleViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/PrivateShare/UserRoleSelection/PrivateShareUserRoleViewController.xib
@@ -60,6 +60,13 @@
                         </label>
                     </subviews>
                 </stackView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LLO-DJ-5MA">
+                    <rect key="frame" x="0.0" y="174.5" width="414" height="1"/>
+                    <color key="backgroundColor" red="0.59215686274509804" green="0.59215686274509804" blue="0.59215686274509804" alpha="0.29920269691780821" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="1" id="zLB-0Q-RyP"/>
+                    </constraints>
+                </view>
                 <stackView opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="infinite" placeholderIntrinsicHeight="100" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="gDS-Lf-voE">
                     <rect key="frame" x="0.0" y="175.5" width="414" height="100"/>
                 </stackView>
@@ -70,11 +77,14 @@
                 <constraint firstItem="gDS-Lf-voE" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="7ch-N0-jFt"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="xAf-oi-x06" secondAttribute="trailing" constant="16" id="8dB-rr-vi1"/>
                 <constraint firstItem="xAf-oi-x06" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="ACZ-ar-nMi"/>
+                <constraint firstItem="gDS-Lf-voE" firstAttribute="top" secondItem="LLO-DJ-5MA" secondAttribute="bottom" id="Bs8-bg-SxG"/>
                 <constraint firstItem="Q6X-FJ-z3O" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="rXk-cS-MHZ" secondAttribute="trailing" constant="8" id="DeJ-af-AzT"/>
                 <constraint firstItem="Q6X-FJ-z3O" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="FIy-ww-jP9"/>
                 <constraint firstItem="xAf-oi-x06" firstAttribute="top" secondItem="rXk-cS-MHZ" secondAttribute="bottom" constant="30" id="UTV-Xr-A1X"/>
                 <constraint firstItem="rXk-cS-MHZ" firstAttribute="centerY" secondItem="Q6X-FJ-z3O" secondAttribute="centerY" id="VKy-tE-3GP"/>
                 <constraint firstItem="gDS-Lf-voE" firstAttribute="top" secondItem="xAf-oi-x06" secondAttribute="bottom" constant="19" id="a0n-5p-INX"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="LLO-DJ-5MA" secondAttribute="trailing" id="dVI-HL-Xok"/>
+                <constraint firstItem="LLO-DJ-5MA" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="e0q-CC-Qwa"/>
                 <constraint firstItem="rXk-cS-MHZ" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="h0e-Hc-fAy"/>
                 <constraint firstItem="Q6X-FJ-z3O" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="16" id="pYe-nL-RQQ"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="gDS-Lf-voE" secondAttribute="trailing" id="u3Q-R5-DOt"/>
