--- a/Depo/Depo/Presentation/UserStories/Others/FileInfo/View/FileInfoView.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/FileInfo/View/FileInfoView.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -13,15 +13,6 @@
             <connections>
                 <outlet property="backgroundView" destination="IrY-vW-8ll" id="94H-Ti-uwl"/>
                 <outlet property="contentView" destination="lOt-sR-o8f" id="gko-AA-pFc"/>
-                <outlet property="enableFIRButton" destination="Jbx-wj-Oaj" id="0EG-xh-PxM"/>
-                <outlet property="enableFIRStackView" destination="pjJ-EF-joh" id="uWX-Kb-6yd"/>
-                <outlet property="enableFIRTextLabel" destination="j7V-Su-vKz" id="3JE-ut-qzD"/>
-                <outlet property="peopleCollectionView" destination="XGQ-57-yav" id="0eE-vk-mVG"/>
-                <outlet property="peopleStackView" destination="6ph-Of-RdC" id="xCf-90-D73"/>
-                <outlet property="peopleTitleLabel" destination="k4x-ud-NF0" id="byQ-dZ-wRp"/>
-                <outlet property="premiumButton" destination="jNm-bk-5oX" id="Wvk-5V-5tO"/>
-                <outlet property="premiumStackView" destination="Ndh-L6-gxh" id="OGj-lN-UM2"/>
-                <outlet property="premiumTextLabel" destination="gxh-jg-bO1" id="o7L-AY-E7x"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="4Iw-YI-xRo"/>
             </connections>
         </placeholder>
@@ -48,100 +39,8 @@
                                                 <constraint firstAttribute="height" constant="3" id="MR2-CY-nTP"/>
                                             </constraints>
                                         </view>
-                                        <stackView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" verticalHuggingPriority="249" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="752" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="lOt-sR-o8f">
+                                        <stackView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" verticalHuggingPriority="249" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="752" placeholderIntrinsicWidth="infinite" placeholderIntrinsicHeight="220.5" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="lOt-sR-o8f">
                                             <rect key="frame" x="20" y="30" width="374" height="220.5"/>
-                                            <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="6ph-Of-RdC">
-                                                    <rect key="frame" x="0.0" y="0.0" width="374" height="220.5"/>
-                                                    <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k4x-ud-NF0">
-                                                            <rect key="frame" x="0.0" y="0.0" width="374" height="20.5"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                            <nil key="textColor"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
-                                                        <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pjJ-EF-joh">
-                                                            <rect key="frame" x="0.0" y="30.5" width="374" height="50"/>
-                                                            <subviews>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="249" verticalHuggingPriority="249" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j7V-Su-vKz">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="294" height="50"/>
-                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                                    <nil key="textColor"/>
-                                                                    <nil key="highlightedColor"/>
-                                                                </label>
-                                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wd7-i5-lmD">
-                                                                    <rect key="frame" x="294" y="0.0" width="80" height="50"/>
-                                                                    <subviews>
-                                                                        <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="748" verticalCompressionResistancePriority="749" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jbx-wj-Oaj" customClass="RoundedInsetsButton" customModule="Billo" customModuleProvider="target">
-                                                                            <rect key="frame" x="0.0" y="10" width="80" height="30"/>
-                                                                            <constraints>
-                                                                                <constraint firstAttribute="width" constant="80" id="Nmo-IE-FQ1"/>
-                                                                                <constraint firstAttribute="height" constant="30" id="Stl-jM-sn2"/>
-                                                                            </constraints>
-                                                                            <state key="normal" title="Button"/>
-                                                                            <connections>
-                                                                                <action selector="onEnableTapped:" destination="-1" eventType="touchUpInside" id="Olv-7S-Slc"/>
-                                                                            </connections>
-                                                                        </button>
-                                                                    </subviews>
-                                                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                                                    <constraints>
-                                                                        <constraint firstItem="Jbx-wj-Oaj" firstAttribute="centerY" secondItem="wd7-i5-lmD" secondAttribute="centerY" id="5nq-R5-0ya"/>
-                                                                        <constraint firstAttribute="width" constant="80" id="S4A-Ez-J3U"/>
-                                                                        <constraint firstItem="Jbx-wj-Oaj" firstAttribute="centerX" secondItem="wd7-i5-lmD" secondAttribute="centerX" id="Wge-37-F6w"/>
-                                                                    </constraints>
-                                                                </view>
-                                                            </subviews>
-                                                        </stackView>
-                                                        <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="XGQ-57-yav">
-                                                            <rect key="frame" x="0.0" y="90.5" width="374" height="130"/>
-                                                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                                            <constraints>
-                                                                <constraint firstAttribute="height" priority="250" constant="130" id="2Bn-ix-P3n"/>
-                                                            </constraints>
-                                                            <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="BVK-Gk-yEY">
-                                                                <size key="itemSize" width="50" height="50"/>
-                                                                <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                                                <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                                                <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                                            </collectionViewFlowLayout>
-                                                        </collectionView>
-                                                    </subviews>
-                                                </stackView>
-                                                <stackView hidden="YES" opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Ndh-L6-gxh">
-                                                    <rect key="frame" x="0.0" y="0.0" width="374" height="38"/>
-                                                    <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gxh-jg-bO1">
-                                                            <rect key="frame" x="0.0" y="0.0" width="374" height="0.0"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                            <nil key="textColor"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
-                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ta7-sX-n30">
-                                                            <rect key="frame" x="0.0" y="10" width="374" height="28"/>
-                                                            <subviews>
-                                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jNm-bk-5oX" customClass="GradientPremiumButton" customModule="Billo" customModuleProvider="target">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="168" height="28"/>
-                                                                    <constraints>
-                                                                        <constraint firstAttribute="height" constant="28" id="aiH-i3-ecj"/>
-                                                                        <constraint firstAttribute="width" constant="168" id="cOL-q1-DZQ"/>
-                                                                    </constraints>
-                                                                    <state key="normal" title="Button"/>
-                                                                    <connections>
-                                                                        <action selector="onPremiumTapped:" destination="-1" eventType="touchUpInside" id="kKz-5y-MGP"/>
-                                                                    </connections>
-                                                                </button>
-                                                            </subviews>
-                                                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                                            <constraints>
-                                                                <constraint firstItem="jNm-bk-5oX" firstAttribute="leading" secondItem="ta7-sX-n30" secondAttribute="leading" id="f2r-0q-rwQ"/>
-                                                                <constraint firstItem="jNm-bk-5oX" firstAttribute="top" secondItem="ta7-sX-n30" secondAttribute="top" id="j5i-rK-GJb"/>
-                                                                <constraint firstAttribute="height" constant="28" id="kg6-qc-qlm"/>
-                                                            </constraints>
-                                                        </view>
-                                                    </subviews>
-                                                </stackView>
-                                            </subviews>
                                         </stackView>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="J1X-Yn-1g6">
                                             <rect key="frame" x="0.0" y="250.5" width="414" height="567.5"/>
