--- a/Depo/Depo/Presentation/UserStories/Others/FileInfo/View/Subviews/FileName/FileNameView.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/FileInfo/View/Subviews/FileName/FileNameView.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -11,7 +11,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="FileNameView" customModule="Billo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="55"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="72"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="evj-aP-cxe">
@@ -71,12 +71,22 @@
                         </stackView>
                     </subviews>
                 </stackView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="m7Q-aI-nJj">
+                    <rect key="frame" x="0.0" y="71" width="414" height="1"/>
+                    <color key="backgroundColor" red="0.91764705882352937" green="0.91764705882352937" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="1" id="4aS-yb-Rau"/>
+                    </constraints>
+                </view>
             </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
                 <constraint firstItem="evj-aP-cxe" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="3lp-X0-yoo"/>
-                <constraint firstAttribute="bottom" secondItem="evj-aP-cxe" secondAttribute="bottom" id="IIH-qX-OXR"/>
+                <constraint firstItem="m7Q-aI-nJj" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="5Bm-rG-P7Q"/>
+                <constraint firstItem="m7Q-aI-nJj" firstAttribute="top" secondItem="evj-aP-cxe" secondAttribute="bottom" constant="16" id="SuI-PF-ci9"/>
                 <constraint firstItem="evj-aP-cxe" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="XYA-cy-XLE"/>
+                <constraint firstAttribute="bottom" secondItem="m7Q-aI-nJj" secondAttribute="bottom" id="Z2D-rG-Oig"/>
+                <constraint firstAttribute="trailing" secondItem="m7Q-aI-nJj" secondAttribute="trailing" id="eXd-je-hPZ"/>
                 <constraint firstAttribute="trailing" secondItem="evj-aP-cxe" secondAttribute="trailing" id="iIK-Gv-ivV"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
