--- a/Depo/Depo/Presentation/UserStories/Others/FileInfo/View/Subviews/People/FileInfoPeopleView.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/FileInfo/View/Subviews/People/FileInfoPeopleView.xib
@@ -15,10 +15,10 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" verticalHuggingPriority="249" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="752" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="gMT-cE-pup">
-                    <rect key="frame" x="0.0" y="0.0" width="414" height="333"/>
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="317"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="iql-2S-W8D">
-                            <rect key="frame" x="0.0" y="0.0" width="414" height="333"/>
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="317"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4zr-Xl-oSy">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="20.5"/>
@@ -27,19 +27,19 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bTR-gK-AqO">
-                                    <rect key="frame" x="0.0" y="23.5" width="414" height="176.5"/>
+                                    <rect key="frame" x="0.0" y="23.5" width="414" height="160.5"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="249" verticalHuggingPriority="249" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZzX-hh-CwJ">
-                                            <rect key="frame" x="0.0" y="0.0" width="334" height="176.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="334" height="160.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="N4c-Wd-Crm">
-                                            <rect key="frame" x="334" y="0.0" width="80" height="176.5"/>
+                                            <rect key="frame" x="334" y="0.0" width="80" height="160.5"/>
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="748" verticalCompressionResistancePriority="749" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iPX-iw-z4B" customClass="RoundedInsetsButton" customModule="Billo" customModuleProvider="target">
-                                                    <rect key="frame" x="0.0" y="73.5" width="80" height="30"/>
+                                                    <rect key="frame" x="0.0" y="65.5" width="80" height="30"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="30" id="0RY-Dg-ZCS"/>
                                                         <constraint firstAttribute="width" constant="80" id="NPg-CZ-eMe"/>
@@ -60,7 +60,7 @@
                                     </subviews>
                                 </stackView>
                                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="Jfz-7M-MKf">
-                                    <rect key="frame" x="0.0" y="203" width="414" height="130"/>
+                                    <rect key="frame" x="0.0" y="187" width="414" height="130"/>
                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                     <constraints>
                                         <constraint firstAttribute="height" priority="250" constant="130" id="8PM-va-nVV"/>
@@ -109,13 +109,23 @@
                         </stackView>
                     </subviews>
                 </stackView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Jng-aN-req">
+                    <rect key="frame" x="0.0" y="332" width="414" height="1"/>
+                    <color key="backgroundColor" red="0.91764705879999997" green="0.91764705879999997" blue="0.91764705879999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="1" id="yXJ-lF-U4L"/>
+                    </constraints>
+                </view>
             </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
+                <constraint firstItem="Jng-aN-req" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="0I1-M3-amk"/>
+                <constraint firstAttribute="bottom" secondItem="Jng-aN-req" secondAttribute="bottom" id="9pQ-kL-kcY"/>
                 <constraint firstAttribute="trailing" secondItem="gMT-cE-pup" secondAttribute="trailing" id="M1v-JJ-NuO"/>
-                <constraint firstAttribute="bottom" secondItem="gMT-cE-pup" secondAttribute="bottom" id="hzg-WN-oaY"/>
+                <constraint firstItem="Jng-aN-req" firstAttribute="bottom" secondItem="gMT-cE-pup" secondAttribute="bottom" constant="16" id="hzg-WN-oaY"/>
                 <constraint firstItem="gMT-cE-pup" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="scP-W2-FkD"/>
                 <constraint firstItem="gMT-cE-pup" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="vkV-7S-sei"/>
+                <constraint firstAttribute="trailing" secondItem="Jng-aN-req" secondAttribute="trailing" id="xHt-pS-QlI"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
